--- a/angular_todo/src/styles.scss
+++ b/angular_todo/src/styles.scss
@@ -1,23 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
-
 // styles.scss (global styles)
 @use '@angular/material' as mat;
+@use '@angular/material/theming' as *;
 
 // Include material core styles
 @include mat.core();
 
 // Define your custom theme
-$primary: mat.define-palette(mat.$indigo-palette);
-$accent: mat.define-palette(mat.$pink-palette);
-$theme: mat.define-light-theme((
+$primary-palette: define-palette($indigo-palette);
+$accent-palette: define-palette($pink-palette);
+
+$theme: define-light-theme((
   color: (
-    primary: $primary,
-    accent: $accent
+    primary: $primary-palette,
+    accent: $accent-palette
   )
 ));
 
 // Apply the theme
-@include mat.all-component-themes($theme);
+@include angular-material-theme($theme);
 
 // Global styles
 html, body {
@@ -31,4 +31,5 @@ html, body {
   background: #f44336;
   color: white;
 }
+
 
